--- a/apps/builder/tsconfig.json
+++ b/apps/builder/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@typebot.io/tsconfig/nextjs.json",
   "compilerOptions": {
+    "jsx": "react",
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
